--- a/api/package.json
+++ b/api/package.json
@@ -1,25 +1,30 @@
 {
     "dependencies": {
-      "express": "^4.17.1",
-      "express-parse-multipart": "^1.1.2",
-      "mysql": "^2.18.1"
+        "express": "^4.18.1",
+        "express-parse-multipart": "^1.1.2",
+        "mysql": "^2.18.1",
+        "ts-node": "^10.8.2",
+        "ts-node-dev": "^2.0.0"
     },
     "name": "boniche-api",
     "description": "API Boniche",
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-      "start": "nodemon server.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/ValMgr/boniche-inc.git"
+        "type": "git",
+        "url": "git+https://github.com/ValMgr/boniche-inc.git"
     },
     "author": "ZartaK40, Tracnor",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/ValMgr/boniche-inc/issues"
+        "url": "https://github.com/ValMgr/boniche-inc/issues"
     },
-    "homepage": "https://github.com/ValMgr/boniche-inc#readme"
-  }
+    "homepage": "https://github.com/ValMgr/boniche-inc#readme",
+    "devDependencies": {
+        "@types/node": "^18.0.1"
+    }
+}
