--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,12 @@
 {
     "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.20.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-parse-multipart": "^1.1.2",
-        "mysql": "^2.18.1",
-        "ts-node": "^10.8.2",
-        "ts-node-dev": "^2.0.0"
+        "mysql": "^2.18.1"
     },
     "name": "boniche-api",
     "description": "API Boniche",
